deployments/plain-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-cost-optimizer
spec:
  selector:
    app: k8s-cost-optimizer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
